--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <img class="imagem-agrinho" src="Agrinho.jpg" alt=""> Agricultura Familiar
         <li class="cabeçalho-lista-ilustração">Comunidade 08 de junho, Paraná</li>
             
-
     </header>
-    <h1>Agricultura Familiar em Ação</h1>
-    <h2> Procurando um </h2>
+    <h1 class="margem">Comunidae Praticando Agricultura Familiar</h1>
+    <h2 class="margem"> A Agricultura Familiar está começando a ser praticado no interior do Paraná </h2>
 
+    <img src="" alt="">
 
 </body>
 </html>
