--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <li class="cabeçalho-lista-ilustração">Comunidade 08 de junho, Paraná</li>
             
     </header>
-    <h1 class="margem">Comunidae Praticando Agricultura Familiar</h1>
-    <h2 class="margem"> A Agricultura Familiar está começando a ser praticado no interior do Paraná </h2>
+    <h1 class="margem">Comunidade Praticando Agricultura Familiar</h1>
+    <h2 class="margem"> A Agricultura Familiar está começando a ser praticado no interior do Paraná, em uma Comunidade </h2>
+    <h2 class="margem"> entre as cidades Laranjeiras do Sul e Rio Bonito do Iguaçu, onde é produzido vegetais e verduras </h2>
 
-    <img src="" alt="">
+    <img class="Imagem-Agricultura" src="foto agricultura familiar.jpeg" alt="">
 
 </body>
 </html>
